# Codeforces

./: .gitignore  1721b
voevodin_e_o/: 0136A.cpp  0136b.cpp  0263a.cpp  0276a  0579a  0915a.cpp  0935b.cpp  1100c.cpp  1165b.cpp  1330a  1352a.cpp  1512-c.cpp  1512b.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1649a.cpp  1670B.cpp  1670b_old.cpp  1671a.cpp  1675c.cpp  1680b.cpp  1690d  1692c  1692c.cpp  1699b  1717b.cpp  1734b.cpp  1744c.cpp  1744d.cpp  879b.cpp  915a.cpp  CMakeLists.txt  Cat_n_mouse.cpp  Gravitaition.cpp  Source.cpp  bpm_22_4_1.cpp  bpm_22_4_2.cpp  bpm_22_4_3.cpp  bruh.vcxproj  (+4 more)
voevodin_e_o/geom/: CMakeLists.txt  Vector.cpp  Vector.hpp
voevodin_e_o/rational/: CMakeLists.txt  Test.cpp
voevodin_e_o/rational/RationalLibrary/: CMakeLists.txt  RationalLibrary.cpp  RationalLibrary.h
